test_regress/t/t_cover_fsm_togglevar_assoc_sel.out
%Warning-COVERIGN: t/t_cover_fsm_togglevar_assoc_sel.v:19:14: Coverage ignored for type ASSOCARRAYDTYPE
                                                            : ... note: In instance 't'
   19 |   input P::A a
      |              ^
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Error: Exiting due to
